# elevator-design

./: .gitignore  CMakeLists.txt  README.md
docs/: ElevatorSimulation.drawio  HLD.md  LLD.md
include/: Domain.hpp  EventQueue.hpp  Scheduler.hpp  Simulation.hpp  Types.hpp
src/: Domain.cpp  Scheduler.cpp  Simulation.cpp  main.cpp
tests/: StressTests.cpp  UnitTests.cpp
